--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@
 .leaflet-tooltip {
   padding: 4px 8px !important;
   font-size: 12px !important;
-  font-weight: 500 !important;
+  font-weight: 400 !important;
   white-space: nowrap !important;
   background-color: white !important;
   border: 1px solid rgba(0, 0, 0, 0.1) !important;
@@ -280,15 +280,16 @@
 /* Remove popup animations */
 .leaflet-fade-anim .leaflet-popup {
   opacity: 1;
-  transition: none;
+  transition:  none;
+  
 }
 
 .leaflet-zoom-anim .leaflet-popup {
-  transition: none;
+  transition:  all 0.5s ease-in-out;
 }
 
 .leaflet-popup {
-  transition: none;
+  transition:  all 0.5s ease-in-out;
 }
 
 .leaflet-popup-content-wrapper,
